--- a/src/App.css
+++ b/src/App.css
@@ -56,11 +56,75 @@ section {
   background-size: cover;
   background-position: center;
   background-color: rgba(1,1 ,1,.75);
+  color: black;
+}
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh; 
+  scroll-snap-align: center;
+  background-image: url("./homebackground.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  /* background-color: rgba(52,85 ,69,1); */
+  color: black;
+}
+.range {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh; 
+  scroll-snap-align: center;
+  background-image: url("./background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(1,1 ,1,.75);
   color: white;
 }
-
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh; 
+  scroll-snap-align: center;
+  /* background-image: url("./background.png"); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  /* background-color: rgba(1,1 ,1,.75); */
+  background-color: red;
+  color: white;
+}
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 110vh; 
+  scroll-snap-align: center;
+  background-image: url("./background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(1,1 ,1,.75);
+  color: white;
+}
 .our-story {
-height: 200vh;
+height: 320vh;
 width: 100%;
 }
 
@@ -72,14 +136,14 @@ width: 100%;
   justify-content:flex-start;
   text-align: center;
   width: 100%;
-  height: 100vh; 
+  height: 110vh; 
   scroll-snap-align: center;
-  background-image: url("./background.png");
+  background-image: url("./aboutpagebackground.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: rgba(1,1 ,1,.75);
-  color: white;
+  /* background-color: rgba(1,1 ,1,.75); */
+  color: black;
 
 }
 
@@ -91,14 +155,14 @@ width: 100%;
   justify-content:flex-start;
   text-align: center;
   width: 100%;
-  height: 100vh; 
+  height: 210vh; 
   scroll-snap-align: center;
-  background-image: url("./background.png");
+  /* background-image: url("./background.png"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: rgba(1,1 ,1,.75);
-  color: white;
+  background-color:  rgb(52,85,69);
+  /* color: ; */
 
 }
 
@@ -128,39 +192,114 @@ nav {
 
 }
 
-@media screen and (max-width: 1044px) {
-  .our-story {
-    height: 280vh;
-     width: 100%;
-  }
-    .our-story-section-2 {
-    height: 180vh;
-  }
-}
 
-@media screen and (max-width: 900px) {
+
+/* @media screen and (max-width: 1044px) {
   .our-story {
-    height: 460vh;
+    height: 320vh;
      width: 100%;
   }
     .our-story-section-2 {
-    height: 360vh;
+    height: 190vh;
   }
-}
-@media screen and (max-width: 550px) {
+} */
+
+/* @media screen and (max-width: 862px) {
   .our-story {
-    height: 540vh;
+    height: 470vh;
+     width: 100%;
+  }
+    .our-story-section-2 {
+    height: 370vh;
+  }
+} */
+
+
+
+@media screen and (max-width: 850px) and (orientation: portrait) {
+  .our-story {
+    height: 390vh;
      width: 100%;
   }
   .our-story-section {
-    height: 150vh;
+    height: 180vh;
   }
 
-      .our-story-section-2 {
-    height: 390vh;
+
+
+}
+
+@media screen and (max-width: 700px) and (orientation: portrait) {
+  .our-story {
+    height: 590vh;
+     width: 100%;
+  }
+  .our-story-section-2 {
+    height: 510vh;
+  }
+}
+
+@media screen and (max-width: 550px) and (orientation: portrait) {
+  .our-story {
+    height: 735vh;
+     width: 100%;
+  }
+  .our-story-section {
+    height: 320vh;
+  }
+
+  .our-story-section-2 {
+    height: 415vh;
   }
 
 
 }
 
+@media screen and (max-width: 360px) and (orientation: portrait) {
 
+    .contact{
+        height: 120vh;
+    }
+
+     .our-story {
+    height: 915vh;
+     width: 100%;
+  }
+  .our-story-section {
+    height: 320vh;
+  }
+
+  .our-story-section-2 {
+    height: 595vh;
+  }
+}
+
+
+@media screen and (min-width: 270px) and (max-width: 1023px) and (orientation: landscape) {
+.our-story {
+width: 100%;
+height:  370vw;
+}
+
+.our-story-section {
+  height: 150vw;
+}
+.our-story-section-2 {
+  height: 220vw;
+}
+  
+}
+@media screen and (min-width: 270px) and (max-width: 754px) and (orientation: landscape) {
+/* .our-story {
+width: 100%;
+height:  0vw;
+}
+
+.our-story-section {
+  height: 150vw;
+}
+.our-story-section-2 {
+  height: 270vw;
+} */
+  
+}
