--- a/src/Features.css
+++ b/src/Features.css
@@ -1,63 +1,89 @@
 .features-outline {
     position: relative;
-    top: 5vh;
-    width: 90%;
-    height: 90vh;
+    /* top: 5vh; */
+    width: 90vw;
+    /* margin: 0 5vw; */
+    /* height: 100vh; */
     /* border: 1px solid white; */
-    grid-template-columns:repeat(auto-fit, minmax(420px, 1fr));
+   
+    grid-template-columns:repeat(auto-fit, minmax(40vw, 1fr));
   /* grid-template-rows: 1fr;    */
   display: grid;
   justify-content: center;
   align-items: center;
-  grid-gap: 10vh;
+  grid-gap: 5vh;
+  color: white;
+  background-color: rgb(176 ,191, 184);
+  /* background-color: red; */
+
 }
 
-
+.feature-page-heading{
+  display: flex;
+  position: relative;
+  top: 2vh;
+  height: 15vh;
+  align-items: center;
+  justify-content: center;
+  color: rgb(176 ,191, 184);
+  /* background-color: black; */
+  /* height: 100%; */
+  font-size: 36px;
+  font-weight: bold;
+}
 .feature-box {
     display: flex;
-    background-color: black;
-    opacity: .7;
-    width: 100%;
-    height: 100%;
+    /* background-color: white; */
+    /* opacity: .7; */
+    width: 90%;
+    margin: 1vh 5vw;
+    height: 60vh;
     align-items: center;
     justify-content: center;
+    /* background-color: rgb(176 ,191, 184); */
+    font-family: 'Red Hat Display', sans-serif;
+     /* min-width: 500px; */
+     /* max-width: 490px; */
     /* border: white 1px solid; */
    
 }
 
 .feature-image-container {
-    width: 33.33333%;
+    width: 100%;
     height: 100%;
     /* border: 1px solid white; */
     display: flex;
     align-items: center;
     justify-content: center;
+    /* background-color: orange; */
 }
 
 .feature-text-container {
     display: grid;
     flex-direction: column;
-    width: 66.66666%;
+    width: 100%;
     height: 100%;
     /* background-color: black; */
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    margin-left: 5%;
 }
 .feature-image {
 
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   
 }
 .feature-heading {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     height: 20%;
     width: 98%;
-    text-align: left;
+    text-align: center;
     /* background-color: blueviolet; */
 }
 
@@ -67,15 +93,16 @@
     justify-content: flex-start;
     height: 90%;
     width: 98%;
-    text-align: left;
+    text-align: center;
     /* background-color: cyan; */
 
 }
 
-@media screen and (max-width: 1044px) {
+@media screen and (max-width: 1204px) and (orientation: portrait) {
     .feature-box {
         flex-direction: column;
-        height: 50vh;
+        /* height: 40vh; */
+        /* min-width: 400px */
     ;
     }
 
@@ -86,30 +113,56 @@
         justify-content: center;
     }
 .features-outline {
-     grid-template-columns:repeat(auto-fit, minmax(350px, 1fr));
+     /* grid-template-columns:repeat(auto-fit, minmax(400px, 1fr)); */
 }
 .feature-image-container {
-    height: 50%;
+    height: 40%;
 }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 858px) and (orientation: portrait) {
     .feature-box {
-        height: 55vh;
+        /* height: 90vh; */
+        /* min-width: 270px; */
     }
 
     .features-outline {
-     grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
+     /* grid-template-columns:repeat(auto-fit, minmax(270px, 1fr)); */
+}
+}
+@media screen and (max-width: 700px) and (orientation: portrait) {
+    .feature-box {
+        /* height: 90vh; */
+        /* min-width: 90vw; */
+    }
+
+    .features-outline {
+     grid-template-columns:repeat(auto-fit, minmax(90vw, 1fr));
 }
 
 }
 
-@media screen and (max-width: 360px) {
-    .feature-detail {
-    font-size: 11.5px;
+@media screen and (max-width: 360px) and (orientation: portrait) {
+   .feature-box {
+    height: 90vh;
 }
 }
 
+@media screen and (min-width: 270px) and (max-width: 1023px) and (orientation: landscape) {
+
+    .feature-box {
+        height: 89vh;
+        background-color: tomato;
+    }
+}
+
+@media screen and (min-width:  754px) and (max-width: 1023px) and (orientation: landscape) {
+
+    .feature-box {
+        height: 89vh;
+        background-color: thistle;
+    }
+}
 
 
 
