--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,21 +1,32 @@
 
 .logo {
-    height: 60px;
+    height: 100%;
     width: 120px;
-    border-radius: 30px;
-    padding: 0 5px;
+    /* border-radius: 30px; */
+    /* padding: 0 5px; */
+    /* padding-left: 20%; */
+    /* background-color: black; */
+    margin-left: 10vw;
+    /* background-color: cyan; */
 }
 
 .navbar {
     position: fixed;
-    top:0;
+    top: 5vh;
     z-index: 1;
     display: flex;
-    width: 90%;
-    height: 60px;
-    margin: 0 5%;
-    margin-top: 10px;
+    width: 100%;
+    height: 10vh;
+    /* margin: 0 5%; */
+    /* margin-top: 10px; */
+    background-color:white;
+    /* opacity: .7; */
+    
 
+}
+
+.navbar ul li:hover {
+    color: orange;
 }
 
 .navbar ul {
@@ -25,27 +36,30 @@
     justify-content: space-evenly;
     align-items: center;
     margin-right: 5px;
-    /* background-color: cyan; */
+
 }
 
 .navbar ul li {
     margin: 0 1rem;
     /* padding: 1rem; */
-    border: white solid 1px;
+    /* border: white solid 1px; */
     border-radius: 30px;
     width: 140px;
     text-align: center;
     line-height: 60px;
-    color: white;
+    color: rgb(52,85,69)
+       /* background-color: black; */
 }
 
 .navbar ul a {
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: bold;
-    font-size: 24px;
-    color: white;
+    font-size: 18px;
+    font-family: 'Red Hat Display', sans-serif;
+    color: #345545;
     height: 60px;
+
+ 
 }
 
 
@@ -55,6 +69,7 @@
         margin: 5vh 10px;
         width: 70px;
         height: 100vh; */
+        /* height: 50px; */
     }
     .navbar ul {
         /* flex-direction: column;
@@ -63,6 +78,7 @@
         justify-content: space-evenly;
         align-items: center;
         width: 100%;
+        line-height: 50px;
     }
     .navbar ul li {
         display: flex;
@@ -76,14 +92,15 @@
     }
         .navbar ul a {
         font-size: 16px;
+        height: 50px;
         
     }
 
     .logo {
         width: 70px;
-        border-radius: 25px;
-        height: 50px;
-         line-height: 50px;
+        /* border-radius: 25px; */
+        /* height: 50px; */
+         /* line-height: 50px; */
        
     }
 
@@ -91,30 +108,42 @@
 
 
 @media screen and (max-width: 530px) {
-
+    .navbar {
+        /* height: 40px; */
+    }
     .navbar ul a {
         font-size: 10px;
+        height: 40px;
             
+    }
+    .navbar ul {
+        line-height: 40px;
     }
     .navbar ul li {
         width: 70px;
         border-radius: 20px;
-        line-height: 40px;
+        /* line-height: 40px; */
     }
     .logo {
-        height: 40px;
+        /* height: 40px; */
         width: 70px;
-        border-radius: 20px;
-        line-height: 40px;
+        /* border-radius: 20px; */
+        /* line-height: 40px; */
     }
 
 }
 
 @media screen and (max-width: 400px) {
 
-
+    .navbar {
+        /* height: 35px; */
+    }
+    .navbar ul {
+        line-height: 35px;
+    }
     .navbar ul a {
         font-size: 8px;
+        height: 35px;
     }
     
     .navbar ul li {
@@ -123,9 +152,9 @@
     }
         
     .logo {
-        height: 35px;
+        /* height: 35px; */
         width: 45px;
-        line-height: 35px;
+        /* line-height: 35px; */
     }
 
 }
