--- a/src/components/CustomSlider.css
+++ b/src/components/CustomSlider.css
@@ -1,28 +1,39 @@
 .slider-image {
-    height: 70vh;
+    height: 65vh;
     width: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 .slider {
+
     width: 100%;
     height: 100%;
     position: sticky;
 
+
 }
 
 .slider-container {
+    /* position: relative;
+    top: 5vh; */
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 70vh;
     width: 90%;
+    margin-top: 5vh;
+  
 
 }
 .carousel-dots li button:before {
-    color: white;
+    color:  #345545;;
 }
 .carousel-dots li.carousel-dots-active button:before {
-color: white;
+color: #345545;;
+}
+
+.carousel-dots {
+    margin-top: 5vh;
 }
 @media screen and (max-width: 800px) {
     .slider {
