--- a/src/Features.css
+++ b/src/Features.css
@@ -1,6 +1,6 @@
 .features-outline {
     position: relative;
-    /* top: 5vh; */
+    top: 15vh;
     width: 90vw;
     /* margin: 0 5vw; */
     /* height: 100vh; */
@@ -13,7 +13,7 @@
   align-items: center;
   grid-gap: 5vh;
   color: white;
-  background-color: rgb(176 ,191, 184);
+  /* background-color: rgb(176 ,191, 184); */
   /* background-color: red; */
 
 }
@@ -21,11 +21,12 @@
 .feature-page-heading{
   display: flex;
   position: relative;
-  top: 2vh;
-  height: 15vh;
+  top: 5vh;
+  /* height: 15vh; */
   align-items: center;
   justify-content: center;
-  color: rgb(176 ,191, 184);
+  color: white;
+     font-family: 'Red Hat Display', sans-serif;
   /* background-color: black; */
   /* height: 100%; */
   font-size: 36px;
@@ -35,12 +36,12 @@
     display: flex;
     /* background-color: white; */
     /* opacity: .7; */
-    width: 90%;
-    margin: 1vh 5vw;
+    width: 100%;
+    /* margin: 1vh 5vw; */
     height: 60vh;
     align-items: center;
     justify-content: center;
-    /* background-color: rgb(176 ,191, 184); */
+    background-color: rgb(176 ,191, 184);
     font-family: 'Red Hat Display', sans-serif;
      /* min-width: 500px; */
      /* max-width: 490px; */
@@ -55,23 +56,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: orange; */
+    /* background-color: white; */
 }
 
 .feature-text-container {
     display: grid;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     height: 100%;
     /* background-color: black; */
     align-items: center;
     /* justify-content: space-between; */
-    margin-left: 5%;
+    /* margin-left: 5%; */
 }
 .feature-image {
 
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     object-fit: cover;
   
 }
@@ -80,10 +81,10 @@
     font-weight: bold;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     height: 20%;
-    width: 98%;
-    text-align: center;
+    width: 100%;
+    text-align: left;
     /* background-color: blueviolet; */
 }
 
@@ -92,8 +93,8 @@
     align-items: flex-start;
     justify-content: flex-start;
     height: 90%;
-    width: 98%;
-    text-align: center;
+    width: 100%;
+    text-align: left;
     /* background-color: cyan; */
 
 }
@@ -101,22 +102,31 @@
 @media screen and (max-width: 1204px) and (orientation: portrait) {
     .feature-box {
         flex-direction: column;
-        /* height: 40vh; */
+        /* height: 140px; */
         /* min-width: 400px */
     ;
     }
 
-    .feature-heading {
+    /* .feature-heading {
         justify-content: center;
     }
     .feature-detail {
         justify-content: center;
-    }
+    } */
 .features-outline {
      /* grid-template-columns:repeat(auto-fit, minmax(400px, 1fr)); */
 }
 .feature-image-container {
     height: 40%;
+    /* background-color: thistle; */
+}
+
+.feature-text-container {
+    height: 50%;
+}
+
+.feature-heading {
+    height: 10%;
 }
 }
 
@@ -132,12 +142,13 @@
 }
 @media screen and (max-width: 700px) and (orientation: portrait) {
     .feature-box {
-        /* height: 90vh; */
+        height: 80vh;
         /* min-width: 90vw; */
     }
 
     .features-outline {
      grid-template-columns:repeat(auto-fit, minmax(90vw, 1fr));
+     background-color: transparent;
 }
 
 }
@@ -148,21 +159,49 @@
 }
 }
 
-@media screen and (min-width: 270px) and (max-width: 1023px) and (orientation: landscape) {
 
-    .feature-box {
-        height: 89vh;
-        background-color: tomato;
+@media screen and (max-width:850px)  and (orientation: landscape) {
+    .feature-page-heading {
+        /* color: red; */
     }
+    .features-outline {
+        grid-template-columns:repeat(auto-fit, minmax(90vw, 1fr));
+    }
+
+        .feature-box {
+        height: 40vw;
+    }
+
+}
+@media screen and (max-width:600px)  and (orientation: landscape) {
+    .feature-page-heading {
+        /* color: blue; */
+    }
+    .feature-box {
+        height: 70vw;
+    }
+
 }
 
-@media screen and (min-width:  754px) and (max-width: 1023px) and (orientation: landscape) {
-
-    .feature-box {
-        height: 89vh;
-        background-color: thistle;
+@media screen and (max-width:500px)  and (orientation: landscape) {
+   .feature-page-heading {
+        /* color: yellow; */
     }
+
+
+
 }
+
+@media screen and (max-width:450px)  and (orientation: landscape) {
+    .feature-page-heading {
+        /* color: tomato; */
+    }
+
+
+
+}
+
+
 
 
 
