--- a/src/TextArea.css
+++ b/src/TextArea.css
@@ -7,7 +7,7 @@
     /* margin-top: 10px;
     margin-bottom: 10px; */
     background-color: white;
-    box-shadow: 1px 1px 1px  #2e3830;
+    box-shadow: 1px 1px 1px  rgb(52, 85, 69);;
 
    
 }
