changed heading coloir on features page

--- a/src/Features.css
+++ b/src/Features.css
@@ -25,7 +25,7 @@
   /* height: 15vh; */
   align-items: center;
   justify-content: center;
-  color: white;
+  /* color: white; */
      font-family: 'Red Hat Display', sans-serif;
   /* background-color: black; */
   /* height: 100%; */
