--- a/src/Contact.css
+++ b/src/Contact.css
@@ -37,7 +37,7 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     width: 90%;
     height: 90%;
     margin: 2vh;
@@ -60,6 +60,7 @@
     width: 100%;
     height: 15%;
     gap: 1vh;
+   
 
 }
 
@@ -154,15 +155,17 @@
 .contact-message {
     width: 100%;
     height: 40%;
+    
 }
 .contact-text-area-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 95%;
     height: 100%;
     gap: 1vh;
+    margin: 1vw;
     /* background-color: turquoise; */
 }
 
@@ -228,14 +231,16 @@ input {
 .contact-names, .contact-number-company { 
     flex-direction: column;
     /* gap: 1%; */
-    height: 20%;
+    height: 22%;
     /* gap: 1%; */
 }
 .contact-email, .contact-send {
     height: 10%;
+    flex-direction: column;
     /* gap: 1%; */
+    width: 100%;
 }
-.contact-form {
+.contact-form input{
     /* gap: 1%; */
 }
 
@@ -253,8 +258,31 @@ input {
 .contact-page-heading {
     top: -5vh;
 }
+.contact-text-area-container { 
+    width: 100%;
+    margin: 0;
 }
 
+}
+
+
+.center-email-status {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    /* color: black; */
+    height: 70vh;
+
+}
+.contact-email-status {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width:100%;
+}
 @media screen and (max-width:850px)  and (orientation: landscape) {
 .contact {
     height: 100vw;
