--- a/src/ContactUs.css
+++ b/src/ContactUs.css
@@ -36,7 +36,8 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    color: black;
+    /* color: black; */
+    background-color: cyan;
 
 }
 
