--- a/src/Contact.css
+++ b/src/Contact.css
@@ -76,8 +76,10 @@
 .contact-send {
     display: flex;
     align-items: center;
-    width: 40%;
+    width: 90%;
     height: 10%;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .contact-send button {
