--- a/src/Contact.css
+++ b/src/Contact.css
@@ -10,8 +10,8 @@
     background-image: url("./contact.png");
     background-position: center;
       background-repeat: no-repeat;
-  background-size: cover;
-  min-width: 300px;
+    background-size: cover;
+    min-width: 300px;
  
 }
 
@@ -229,6 +229,24 @@ input {
   font-size: 36px;
   font-weight: bold;
 }
+
+.contact-recapture  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 15%;
+
+}
+
+
+
+iframe {
+    transform: scale(.5) ;
+
+}
+
+
 @media screen and (max-width:800px) and (orientation:portrait) {
 .contact-form-container {
     /* background-color: blueviolet; */
