--- a/src/RangeDetail.css
+++ b/src/RangeDetail.css
@@ -34,7 +34,7 @@
     /* flex-direction: column; */
     grid-template-columns: 4fr 3fr 3fr;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     /* background-color: thistle; */
 }
 
@@ -160,12 +160,12 @@ li{
     /* margin: 0 5%; */
     border: 1px solid white;
     border-radius: 30px;
-    margin-bottom: 10%;
+    margin: 10% 0;
     
 
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1100px) and (orientation: portrait) {
 .range-detail-view-flex {
     flex-direction: column;
 
@@ -216,5 +216,26 @@ li{
 @media screen and (max-width: 400px)and (orientation: portrait)  {
 .range-detail-container {
     height: 200vh;
+}
+}
+
+
+@media screen and (max-width:900px)  and (orientation: landscape) {
+.range-detail-container {
+    height: 170vw;
+}
+
+.range-detail-view-container {
+    height: 90%;
+}
+
+.range-detail-view-flex {
+    flex-direction: column;
+
+}
+.enquire-link {
+    width: 200px;
+    height: 100px;
+
 }
 }
