--- a/src/RangeDetail.css
+++ b/src/RangeDetail.css
@@ -24,7 +24,7 @@
     top: 15vh;
     width: 80%;
     margin: 5% 10%;
-    height: 60%;
+    /* height: 60%; */
     /* border: 1px solid white; */
     /* background-color: thistle; */
 }
