--- a/src/RangeDetail.css
+++ b/src/RangeDetail.css
@@ -31,7 +31,7 @@
 
 .range-detail-view-flex {
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     grid-template-columns: 4fr 3fr 3fr;
     width: 100%;
     height: 100%;
@@ -44,19 +44,26 @@
     grid-template-rows: 1fr 5fr;
     /* justify-content:center; */
     /* align-items: center; */
-    width: 90%;
+    width: 100%;
     margin: 0 5%;
     /* height: 100%; */
     /* background-color: white; */
 }
 .range-detail-view-floorplan-image {
-    width: 100%;
-    /* height: 100%; */
-    background-color: white;
+    width: 90%;
+    height: 100%;
+    /* transform: rotate(-90deg); */
+
+    /* margin: 0 5%; */
+    /* background-color: white; */
 }
 .range-detail-view-floorplan img {
+    
     width: 100%;
-    /* height: 100%; */
+    /* margin: 0 5%; */
+
+    /* object-fit: scale-down; */
+    height: 100%;
     /* background-color: palegoldenrod; */
 }
 
@@ -75,7 +82,7 @@
     color: white;
     font-family: 'Red Hat Display', sans-serif;
     text-transform: uppercase;
-    margin: 5vh 0;
+    margin: 5vh 0%;
     font-weight: bold;
 }
 
@@ -122,7 +129,7 @@
     color: white;
     font-family: 'Red Hat Display', sans-serif;
     text-transform: uppercase;
-    margin: 5vh 0;
+    margin: 5vh 0%;
     /* padding-left: 10%; */
     font-weight: bold;
 }
@@ -176,6 +183,7 @@ li{
     
 
 }
+
 
 @media screen and (max-width: 1100px) and (orientation: portrait) {
 .range-detail-view-flex {
