--- a/src/Contact.css
+++ b/src/Contact.css
@@ -7,9 +7,9 @@
     align-items: center;
     position: relative;
     top: 10vh;
-    background-image: url("./contact.png");
+    background-image: url("./assets/contatct/contact.png");
     background-position: center;
-      background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
     min-width: 300px;
  
