made projects screen responsive and landscape

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -34,7 +34,7 @@
 
 .project-container {
     width: 100%;
-    height:80%;
+    height:50vh;
     background-color: white;
 }
 
@@ -68,4 +68,19 @@
     .projects {
         height: 250vh;
     }
+}
+
+@media screen and (max-width:925px)  and (orientation: landscape) {
+    .projects {
+        height: 200vw;
+    }
+
+    .project-container {
+        height: 50vw;
+    }
+
+    .project-slider-image {
+        height: 30vw;
+    }
+
 }
